--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,21 @@ ol li {
     height: 694px;
 }
 
+.carousel-container {
+    display: inline-flex;
+    align-items: center;
+    flex-direction: column;
+    background: url(../images/carouselelement.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    border: none;
+    margin: 0;
+
+    /* Maintain a height:width ratio of 1.734*/
+    width: 280px;
+    height: 486px;
+}
+
 .business-name-header {
     position: relative;
     top: 5px;
@@ -138,6 +153,76 @@ ol li {
 }
 
 .call-to-action-button {
+    border: none;
+    background: transparent;
+    position: relative;
+    top: 5px;
+    font-size: 1.75rem;
+    color: #1787FB;
+    font-weight: 500;
+    width: 270px;
+    text-align: center;
+    resize: none;
+    min-height: 35px;
+    max-height: 50px;
+}
+
+.carousel-image {
+    border: none;
+    align-self: flex-start;
+    position: relative;
+    top: 0px;
+    left: 10px;
+    font-size: 1.5rem;
+    color: black;
+    font-weight: 900;
+    width: 250px;
+    padding: 5px;
+    text-align: left;
+    resize: vertical;
+    min-height: 136px;
+}
+
+.carousel-title {
+    border: none;
+    align-self: flex-start;
+    position: relative;
+    font-size: 1.5rem;
+    color: black;
+    font-weight: 900;
+    width: 270px;
+    padding: 5px;
+    text-align: left;
+    resize: none;
+}
+.carousel-title-encapsulate {
+    border: none;
+    align-self: flex-start;
+    position: relative;
+    top: 0px;
+    left: 0px;
+    font-size: 1.5rem;
+    color: black;
+    font-weight: 900;
+    width: 270px;
+    padding: 5px;
+    text-align: left;
+    resize: vertical;
+    min-height: 105px;
+}
+
+.carousel-button-encapsulate {
+    border: none;
+    background: transparent;
+    align-self: flex-start;
+    position: relative;
+    top: 5px;
+    left: 0px;
+    width: 270px;
+    padding: 5px;
+}
+
+.carousel-button {
     border: none;
     background: transparent;
     position: relative;
