--- a/css/main.css
+++ b/css/main.css
@@ -217,7 +217,7 @@ ol li {
     align-self: flex-start;
     position: relative;
     font-size: 1.5rem;
-    color: black;
+    color: grey;
     font-weight: 900;
     width: 270px;
     padding: 20px;
