--- a/css/main.css
+++ b/css/main.css
@@ -213,11 +213,12 @@ ol li {
 
 .plain-text-area {
     border: solid;
+    border-color: grey;
     border-width: 1px;
     align-self: flex-start;
     position: relative;
     font-size: 1.5rem;
-    color: grey;
+    color: black;
     font-weight: 900;
     width: 270px;
     padding: 20px;
@@ -236,7 +237,48 @@ ol li {
     padding: 5px;
 }
 
+.purchase {
+    display: inline-flex;
+    align-items: center;
+    flex-direction: column;
+    background: url(../images/purchase.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    border: none;
+    margin: 2px;
+}
+
+.purchase-prompt {
+    border: none;
+    align-self: flex-start;
+    position: relative;
+    font-size: 1.5rem;
+    color: black;
+    font-weight: 900;
+    width: 250px;
+    padding: 5px;
+    left: 15px;
+    top: 15px;
+    text-align: left;
+    resize: none;
+}
+
 .carousel-button {
+    border: none;
+    background: transparent;
+    position: relative;
+    top: 5px;
+    font-size: 1.75rem;
+    color: #1787FB;
+    font-weight: 500;
+    width: 270px;
+    text-align: center;
+    resize: none;
+    min-height: 35px;
+    max-height: 50px;
+}
+
+.purchase-button {
     border: none;
     background: transparent;
     position: relative;
